--- a/.github/workflows/build-openwrt1.yml
+++ b/.github/workflows/build-openwrt1.yml
@@ -18,7 +18,7 @@ on:
   pull_request:
     branches: [main]
   schedule:
-    - cron: 0 0 * * *
+    #- cron: 0 0 * * *
 
 env:
   REPO_URL: https://github.com/baiywt/openwrt
